removed last week of class

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@ div.change {
 
     <li><b>Week 11</b>
         <ul>
-            <li>12/8/2014: </li>
-            <li>12/10/2014: </li>
+            <li>Final Exam</li>
         </ul>
     </li>
 
