add links to back to github page and download tar ball and zip

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@ div.change {
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<p>For more information about this course, please see the <a href="syllabus.html">course syllabus</a>.</p>
+<p>For more information about this course, please see the <a href="syllabus.html">course syllabus</a>.
+Course materials can be downloaded in the following formats: 
+<a href="https://github.com/csula/cs203-fall-2014/zipball/master">.zip</a> or 
+<a href="https://github.com/csula/cs203-fall-2014/tarball/master">.tar.gz</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
 
 <h3>Course Schedule</h3>
 
