updated the syllabus and added schedule for the quarter

--- a/index.html
+++ b/index.html
@@ -28,79 +28,75 @@ div.change {
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<p>For more information about this course, please see the <a href="syllabus.html">course syllabus</a>.
-Course materials can be downloaded in the following formats: 
-<a href="https://github.com/csula/cs203-fall-2014/zipball/master">.zip</a> or 
-<a href="https://github.com/csula/cs203-fall-2014/tarball/master">.tar.gz</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
+<p> View the <a href="syllabus.html">syllabus</a>.  Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
 
 <h3>Course Schedule</h3>
 
 <ul>
-    <li><b>Week 1</b>
+    <li><b>Week 1</b>: <em>Introduction, Welcome, Review of CS202, and Recursion</em>
         <ul>
-            <li>9/29/2014: <a href="lecture01">Introduction and Welcome</a></li>
+            <li>9/29/2014: <a href="lecture01">Lecture 1</a></li>
             <li>10/1/2014</li>
         </ul>
     </li>
   
-    <li><b>Week 2</b>
+    <li><b>Week 2</b>: <em>Generics</em>
         <ul>
             <li>10/6/2014</li>
             <li>10/8/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 3</b>
+    <li><b>Week 3</b>: <em>Lists, Stacks, Queus, and Priority Queues</em>
         <ul>
             <li>10/13/2014</li>
             <li>10/15/2014</li>
         </ul>
     </li>
 
-
-    <li><b>Week 4</b>
+    <li><b>Week 4</b>: <em>Sets and Maps</em>
         <ul>
             <li>10/20/2014</li>
             <li>10/22/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 5</b>
+    <li><b>Week 5</b>: <em>Efficient Algorithms</em>
         <ul>
             <li>10/27/2014</li>
             <li>10/29/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 6</b>
+    <li><b>Week 6</b>: <em>Sorting and Searching</em>
         <ul>
             <li>11/3/2014</li>
             <li>12/5/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 7</b>
+    <li><b>Week 7</b>: <em>Trees</em>
         <ul>
             <li>11/10/2014</li>
             <li>11/12/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 8</b>
+    <li><b>Week 8</b>: <em>Hashing</em>
         <ul>
             <li>11/17/2014</li>
             <li>11/19/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 9</b>
+    <li><b>Week 9</b>: <em>Graphs</em>
         <ul>
             <li>11/24/2014</li>
             <li>11/26/2014</li>
         </ul>
     </li>
 
-    <li><b>Week 10</b>
+    <li><b>Week 10</b>: <em>Parallel Programming</em>
         <ul>
             <li>12/1/2014</li>
             <li>12/3/2014</li>
