update schedule to include quiz

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ div.change {
 
     <li><b>Week 4</b>: <em>Sets and Maps</em>
         <ul>
-            <li>10/20/2014</li>
+            <li>10/20/2014: Quiz 1</li>
             <li>10/22/2014</li>
         </ul>
     </li>
@@ -77,7 +77,7 @@ div.change {
 
     <li><b>Week 7</b>: <em>Trees</em>
         <ul>
-            <li>11/10/2014</li>
+            <li>11/10/2014: Quiz 2</li>
             <li>11/12/2014</li>
         </ul>
     </li>
@@ -99,13 +99,13 @@ div.change {
     <li><b>Week 10</b>: <em>Parallel Programming</em>
         <ul>
             <li>12/1/2014</li>
-            <li>12/3/2014</li>
+            <li>12/3/2014: Final Exam</li>
         </ul>
     </li>
 
-    <li><b>Week 11</b>
+    <li><b>Week 11</b>: <em>Project Demonstration</em>
         <ul>
-            <li>Final Exam</li>
+            <li>Date and Time TBD</li>
         </ul>
     </li>
 
