use css/ now instead of cut-and-paste all over the place.

--- a/lecture.html
+++ b/lecture.html
@@ -2,34 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>CS203: Programming with Data Structure</title>
-<style type="text/css">
-#content {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 20px;
-}
-#footer {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    text-align: center;
-    font-size: 18px;
-    color: #444444;
-}
-div.code {
-    font-family: courier, monospace;
-    font-size: 16px;
-    background-color: #EEE;
-    white-space: pre-wrap;
-    margin: 20px 100px 20px 20px;
-    padding: 10px;
-}
-div.change {
-    color: green;
-}
-</style>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
