rename lecture01 to lecture03 (first two sessions are review).

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <ul>
     <li><b>Week 1</b>: <em>Introduction, Welcome, Review of CS202, and Recursion</em>
         <ul>
-            <li>9/29/2014: <a href="lecture01">Lecture 1</a></li>
-            <li>10/1/2014</li>
+            <li>9/29/2014: Lecture 1</li> 
+            <li>10/1/2014: Lecture 2</li> 
         </ul>
     </li>
   
     <li><b>Week 2</b>: <em>Generics</em>
         <ul>
-            <li>10/6/2014</li>
-            <li>10/8/2014</li>
+            <li>10/6/2014: <a href="lecture03">Lecture 3</a></li>
+            <li>10/8/2014: Lecture 4</li>
         </ul>
     </li>
 
-    <li><b>Week 3</b>: <em>Lists, Stacks, Queus, and Priority Queues</em>
+    <li><b>Week 3</b>: <em>Lists, Stacks, Queues, and Priority Queues</em>
         <ul>
             <li>10/13/2014</li>
             <li>10/15/2014</li>
