--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <ul>
     <li><b>Week 1</b>: <em>Introduction, Welcome, Review of CS202, and Recursion</em>
         <ul>
-            <li>9/29/2014: Lecture 1</li> 
-            <li>10/1/2014: Lecture 2</li> 
+            <li>9/29/2014: Lecture 1 (no notes just review)</li> 
+            <li>10/1/2014: <a href="lecture02">Lecture 2</a></li> 
         </ul>
     </li>
   
