--- a/lecture04/index.html
+++ b/lecture04/index.html
@@ -8,7 +8,7 @@
 
 <div id="content">
 
-<h1>S203: Programming with Data Structure</h1>
+<h1>CS203: Programming with Data Structure</h1>
 
 <h2>Lecture 4</h2>
 
