move syllabus into its own folder (for consistency)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<p> View the <a href="syllabus.html">syllabus</a>.  Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
+<p> View the <a href="syllabus">syllabus</a>.  Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
 
 <h3>Course Schedule</h3>
 
