present with a link at the top

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<p> View the <a href="syllabus">syllabus</a>.  Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a>.  Return to the <a href="https://github.com/csula/cs203-fall-2014">github page</a>.</p>
+<h4>Quick Links</h4>
+
+<ul>
+   <li>View course's <a href="syllabus">syllabus</a></li>
+   <li>Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a></li>
+   <li>The course's <a href="https://github.com/csula/cs203-fall-2014">github page</a></li>
+   <li>Participate in the course's <a href="https://groups.google.com/forum/#!forum/csula-cs203-java-programming">google discussion board</a></li>
+</ul>
+
 
 <h3>Course Schedule</h3>
 
@@ -25,7 +33,7 @@
     <li><b>Week 2</b>: <em>Generics</em>
         <ul>
             <li>10/6/2014: <a href="lecture03">Lecture 3</a></li>
-            <li>10/8/2014: Lecture 4</li>
+            <li>10/8/2014: <a href="homework01">Homework 1</a></li>
         </ul>
     </li>
 
