create lecture 4 copy emacs template for regex update links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul>
    <li>View course's <a href="syllabus">syllabus</a></li>
    <li>Download the <a href="https://github.com/csula/cs203-fall-2014/zipball/master">latest source code</a></li>
-   <li>The course's <a href="https://github.com/csula/cs203-fall-2014">github page</a></li>
+   <li>Visit the course's <a href="https://github.com/csula/cs203-fall-2014">github page</a></li>
    <li>Participate in the course's <a href="https://groups.google.com/forum/#!forum/csula-cs203-java-programming">google discussion board</a></li>
 </ul>
 
