add link to lecture 4

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <li><b>Week 3</b>: <em>Lists, Stacks, Queues, and Priority Queues</em>
         <ul>
-            <li>10/13/2014</li>
+            <li>10/13/2014: <a href="lecture04">Lecture 4</a></li>
             <li>10/15/2014</li>
         </ul>
     </li>
