add placeholder for all lectures

--- a/lecture02/index.html
+++ b/lecture02/index.html
@@ -22,11 +22,10 @@
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<h2>Lecture 2</h2>
-
+<h2>Lecture 2 / Recursion </h2>
 <p>Reading assignment: chapter 18</p>
 
-<h3>Lesson Objectives</h3>
+<h2>Lesson Objectives</h2>
 <ul>
    <li>To describe what a recursive method is and the benefits of using recursion </li>
    <li>To develop recursive methods for recursive mathematical functions </li>
