--- a/index.html
+++ b/index.html
@@ -26,69 +26,69 @@
     <li><b>Week 1</b>: <em>Introduction, Welcome, Review of CS202, and Recursion</em>
         <ul>
             <li>9/29/2014: Lecture 1 (no notes just review)</li> 
-            <li>10/1/2014: <a href="lecture02">Lecture 2</a></li> 
+            <li>10/1/2014: <a href="lecture02/index.html">Lecture 2</a></li> 
         </ul>
     </li>
   
     <li><b>Week 2</b>: <em>Generics</em>
         <ul>
-            <li>10/6/2014: <a href="lecture03">Lecture 3</a></li>
+            <li>10/6/2014: <a href="lecture03/index.html">Lecture 3</a></li>
             <li>10/8/2014: <a href="homework01">Homework 1</a></li>
         </ul>
     </li>
 
     <li><b>Week 3</b>: <em>Lists, Stacks, Queues, and Priority Queues</em>
         <ul>
-            <li>10/13/2014: <a href="lecture04">Lecture 4</a></li>
-            <li>10/15/2014</li>
+            <li>10/13/2014: <a href="lecture04/index.html">Lecture 4</a></li>
+            <li>10/15/2014: <a href="lecture04-2/index.html">Composite Data Structure</a></li>
         </ul>
     </li>
 
     <li><b>Week 4</b>: <em>Sets and Maps</em>
         <ul>
             <li>10/20/2014: Quiz 1</li>
-            <li>10/22/2014</li>
+            <li>10/22/2014: <a href="lecture05/index.html">Lecture 5</a></li>
         </ul>
     </li>
 
     <li><b>Week 5</b>: <em>Efficient Algorithms</em>
         <ul>
-            <li>10/27/2014</li>
-            <li>10/29/2014</li>
+            <li>10/27/2014: <a href="lecture06/index.html">Lecture 6</a></li>
+            <li>10/29/2014: Homework 2</li>
         </ul>
     </li>
 
     <li><b>Week 6</b>: <em>Sorting and Searching</em>
         <ul>
-            <li>11/3/2014</li>
-            <li>12/5/2014</li>
+            <li>11/3/2014: <a href="lecture07/index.html">Lecture 7</a></li>
+            <li>12/5/2014: Homework 3</li>
         </ul>
     </li>
 
     <li><b>Week 7</b>: <em>Trees</em>
         <ul>
             <li>11/10/2014: Quiz 2</li>
-            <li>11/12/2014</li>
+            <li>11/12/2014: <a href="lecture08/index.html">Lecture 8</a></li>
         </ul>
     </li>
 
     <li><b>Week 8</b>: <em>Hashing</em>
         <ul>
-            <li>11/17/2014</li>
-            <li>11/19/2014</li>
+            <li>11/17/2014:<a href="lecture09/index.html">Lecture 9</a></li>
+            <li>11/19/2014: Homework 4</li>
         </ul>
     </li>
 
     <li><b>Week 9</b>: <em>Graphs</em>
         <ul>
-            <li>11/24/2014</li>
-            <li>11/26/2014</li>
+            <li>11/24/2014:<a href="lecture10/index.html">Lecture 10</a></li>
+            <li>11/26/2014: Project</li>
         </ul>
     </li>
 
     <li><b>Week 10</b>: <em>Parallel Programming</em>
         <ul>
-            <li>12/1/2014</li>
+            <li>12/1/2014: <a href="lecture11/index.html">Lecture 11</a></li>
             <li>12/3/2014: Final Exam</li>
         </ul>
     </li>
