--- a/lecture03/index.html
+++ b/lecture03/index.html
@@ -10,11 +10,10 @@
 
 <h1>CS203: Programming with Data Structure</h1>
 
-<h2>Lecture 3</h2>
-
+<h2>Lecture 3 / Generics</h2>
 <p>Reading assignment: chapter 19</p>
 
-<h3>Lesson Objectives</h3>
+<h2>Lesson Objectives</h2>
 <ul>
    <li>To descriibe the benefits of generics </li>
    <li>To use generic classes and interfaces </li>
