fix typo and add emphasis on topics

--- a/lecture04/index.html
+++ b/lecture04/index.html
@@ -32,7 +32,7 @@ Comparator interface </li>
 
 <h3>Introduction</h3>
 
-<p>Java provides several more data structures that can be used to organize and manipu- late data efficiently. These are commonly known as Java Collections Framework. We will introduce the applications of lists, vectors, stacks, queues, and priority queues.</p>
+<p>Java provides several more data structures that can be used to organize and manipulate data efficiently. These are commonly known as Java Collections Framework. We will introduce the applications of <strong>lists</strong>, <strong>vectors</strong>, <strong>stacks</strong>, <strong>queues</strong>, and <strong>priority queues</strong>.</p>
 
 <h4>Collection</h4>
 
