--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <li><b>Week 4</b>: <em>Sets and Maps</em>
         <ul>
             <li>10/20/2014: Quiz 1</li>
-            <li>10/22/2014: <a href="lecture05/index.html">Lecture 5</a></li>
+            <li>10/22/2014: HW1 due, <a href="lecture05/index.html">Lecture 5</a></li>
         </ul>
     </li>
 
