--- a/lecture04-2/index.html
+++ b/lecture04-2/index.html
@@ -94,6 +94,8 @@
 
 <h3>Putting everything together: Complex Data Structure</h3>
 
+<p>Let's assemble all that we've learned above into a large cohesive application framework.</p>
+
 </div>
 
 <div id="footer">
