--- a/lecture03/index.html
+++ b/lecture03/index.html
@@ -15,7 +15,7 @@
 
 <h2>Lesson Objectives</h2>
 <ul>
-   <li>To descriibe the benefits of generics </li>
+   <li>To describe the benefits of generics </li>
    <li>To use generic classes and interfaces </li>
    <li>To define generic classes and interfaces </li>
    <li>To explain why generic types can improve reliability and readability </li>
